web/src/components/Common/Navigation/Navigation.module.scss
@import '_backline-mixins';
@import 'setting';

.Root {
  background-color: $color-primary-white;
  position: fixed;
  z-index: 300;
  width: 100%;
  padding: spacing(1) spacing(2);
  transition: $duration-shortest $easing-standard;
}

.NavLink {
  float: right;
  display: block;
  text-align: center;
  padding: spacing(1) spacing(2) spacing(1) 0;
  text-decoration: none;
}

.NavLink:first-of-type {
  padding-right: 0;
}

.Branding {
  font-size: inherit;
  display: inline-block;
  position: relative;
  top: 3px;

  & a {
    display: inline-block;
  }
}

.Logo {
  display: block;
  transition: $duration-short $easing-standard;
  width: 40px;
  height: 100%;
  object-fit: contain;

  &:hover {
    transform: scale(1.2);
    transition: $duration-short $easing-standard;
  }
}

.Root .ToggleNavButton {
  display: none;
}

.Dropdown {
  float: right;
  overflow: hidden;
}

.Dropdown .DropdownBtn {
  border: none;
  outline: none;
  padding: spacing(1) spacing(2) spacing(1) 0;
  margin: 0;

}

.DropdownContent {
  display: none;
  position: absolute;
  min-width: 160px;
  z-index: 300;
  background-color: $color-primary-white;

}

.DropdownContent .NavLink {
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
  width: 100%;
}

.Root .NavLink:hover,
.Dropdown:hover .DropdownBtn {
  color: $color-primary-red;
}

.DropdownContent .NavLink:hover {
  color: $color-hover;
}

.Dropdown:hover .DropdownContent {
  display: block;
}

.DarkModeToggle {
  float: right;
  padding: spacing(1) 0 spacing(1) spacing(2);
}

.ToggleNavButton,
.DarkModeToggle {
  transition: $duration-shortest $easing-standard;

  &:hover {
    svg path {
      fill: $color-hover;
      stroke: $color-hover;
      transition: $duration-shortest $easing-standard;
    }
  }
}

@media screen and (max-width: 600px) {
  .Root .NavLink:not(:first-child),
  .Dropdown .DropdownBtn {
    display: none;
  }
  .Root .ToggleNavButton {
    float: right;
    display: block;
    position: relative;
    top: 5px;
  }
}

@media screen and (max-width: 600px) {
  .Root.Responsive {
    display: flex;
    flex-direction: column-reverse;
  }

  .Root.Responsive .Branding {
    order: 1;
  }

  .Root.Responsive .ToggleNavButton {
    position: absolute;
    right: spacing(7);
    top: spacing(2);
  }

  .Root.Responsive .DarkModeToggle {
    position: absolute;
    right: spacing(2);
    top: spacing(1);
  }

  .Root.Responsive .NavLink {
    float: none;
    display: block;
    text-align: left;
  }

  .Root.Responsive .Dropdown {
    float: none;
  }

  .Root.Responsive .DropdownContent {
    position: relative;
  }

  .Root.Responsive .Dropdown .DropdownBtn {
    display: block;
    width: 100%;
    text-align: left;
  }
}

.isDark {
  &.Root,
  .DropdownContent {
    background-color: $color-primary-black;
  }

  .NavLink,
  .Dropdown,
  .DarkModeToggle,
  .ToggleNavButton {
    color: $color-primary-white;
  }
}

